redar configuration changes

--- a/rebar.config
+++ b/rebar.config
@@ -7,9 +7,9 @@
 
 {deps, [
   {bson, ".*",
-   {git, "git://github.com/comtihon/bson-erlang", {tag, "v0.2.2"}}},
+   {git, "git://github.com/deolan/bson-erlang", {tag, "0.2.3"}}},
   {pbkdf2, ".*",
-   {git, "git://github.com/comtihon/erlang-pbkdf2.git", {tag, "2.0.0"}}},
+   {git, "git://github.com/deolan/erlang-pbkdf2.git", {tag, "2.0.1"}}},
   {poolboy, ".*",
    {git, "git://github.com/comtihon/poolboy.git", {branch, "master"}}}
 ]}.
